--- a/userservice.properties
+++ b/userservice.properties
@@ -1,5 +1,12 @@
-eureka.client.serviceUrl.defaultZone= http://localhost:8099/eureka/
-eureka.client.serviceUrl.register-with-eureka= true
-eureka.client.serviceUrl.fetch-registry= true
+server.port=8090
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/userdb
+spring.datasource.username=root
+spring.datasource.password=root123
+driverClassName=com.mysql.jdbc.Driver
+spring.application.name=userservice
 
-spring.h2.console.enabled= true
+
+eureka.instance.leaseRenewalIntervalInSeconds=1
+leaseExpirationDurationInSeconds= 2
+eureka.client.serviceUrl.defaultZone= http://localhost:8099/eureka/
